--- a/BookListRazor/Pages/Shared/_Layout.cshtml
+++ b/BookListRazor/Pages/Shared/_Layout.cshtml
@@ -40,8 +40,13 @@
                                 <img src="~/img/Home/Icons/food.jpg" class="img-center" style="width: 50px; height: 50px; object-fit: inherit" />Food
                             </a>
                         </li>
-                        <li class="nav-item">
+                        @*<li class="nav-item">
                             <a asp-page="/WorldClimate/CascadingDropdownsModel">
+                                <img src="~/img/Home/Icons/travel.jpg" class="img-center" style=" width: 50px; height: 50px;" />Travel
+                            </a>
+                        </li>*@
+                        <li class="nav-item">
+                            <a asp-page="/WorldClimate/TravelCalculator">
                                 <img src="~/img/Home/Icons/travel.jpg" class="img-center" style=" width: 50px; height: 50px;" />Travel
                             </a>
                         </li>
