--- a/BookListRazor/Pages/WorldClimate/Readmore.cshtml
+++ b/BookListRazor/Pages/WorldClimate/Readmore.cshtml
@@ -26,7 +26,7 @@
 <br />
 <body>
 
-    <div class="border container" style="padding: 30px; background-color:black; opacity:0.4;">
+    <div class="container" style="padding: 30px; background-color:black; opacity:0.6;">
         <div class=" align-items-center" style="font-weight:600">
             <ul>
                 <li style="color:#86bc24;"><a href="https://www.dosomething.org/us/facts/11-facts-about-e-waste#fn6" target="_blank" style="color:#fff">11 facts about E-waste</a></li>
