--- a/BookListRazor/Pages/WorldClimate/SelectEwaste.cshtml
+++ b/BookListRazor/Pages/WorldClimate/SelectEwaste.cshtml
@@ -1,7 +1,6 @@
 ﻿@page
 @model BookListRazor.Pages.BookList.SelectEwasteModel
 
-<br />
 <h2 class="text-info">Donate for better world tomorrow</h2>
 <br />
 
@@ -12,12 +11,11 @@
             <div class="col-3">
                 <label>Choose items and quantity </label>
             </div>
-            @*<span asp-validation-for="SelectEwaste.UserId" class="text-danger"></span>*@
         </div>
 
         <div class="form-group row stone1">
             <div>
-                <div id="button" class="eggcheesesandwich">
+                <div id="button" class="laptopewaste">
                     <div class="cheesesandwich1">
                         <h2 class="cheesesandwich2">Laptop</h2>
                     </div>
@@ -32,11 +30,9 @@
                 </div>
             </div>
         </div>
-
-
         <div class="form-group row stone1">
             <div>
-                <div id="button" class="eggcheesesandwich">
+                <div id="button" class="mobileewaste">
                     <div class="cheesesandwich1">
                         <h2 class="cheesesandwich2">Mobile</h2>
                     </div>
@@ -51,9 +47,7 @@
                 </div>
             </div>
         </div>
-
-
-        <div class="form-group row stone1">
+        @*<div class="form-group row stone1">
             <div>
                 <div id="button" class="eggcheesesandwich">
                     <div class="cheesesandwich1">
@@ -88,124 +82,43 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </div>*@
 
 
-
-        @*<div class="container meal">
-                <div class="text-center">
-                    <button type="submit" id="calculate" asp-route-data="foo" asp-page-handler="SellProduct" class="btn btn-primary" onclick="document.getElementById('firstMeal').value">Calculate</button>
-                </div>
-            </div>*@
-
-
-        @section Styles{
-            <link href="~/css/FoodCalculator.css" rel="stylesheet" />
-            <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
-        }
-
-        @section Scriptsjs{
-            <script src="~/js/FoodCalculator.js"></script>
-        }
-
-        <!--<div class="form-group row">
-            <div class="col-6">
-                <img class="d-block w-100" src="https://www.rts.com/wp-content/uploads/2020/09/Electronics-recycling_New-York-1024x683.jpeg" alt="Box of Ewaste">
-
-
-            </div>
-
-            <div class="col-1">
-                <input type="checkbox" id="P1" name="Product" value="1001">
-                <label asp-for="SelectEwaste[0].productId">Laptop</label>
-                <input asp-for="SelectEwaste[0].Quantity"></input>
-            </div>
-
-
-        </div>-->
-        @*@Html.RadioButtonFor(model => model.gender, "Female", new { @checked = true })*@
-        <!--<div class="form-group row">
-        <div class="col-6">
-            <img class="d-block w-100" src="https://www.rts.com/wp-content/uploads/2020/09/Electronics-recycling_New-York-1024x683.jpeg" alt="Box of Ewaste">
-
-
-        </div>-->
-        @*<span asp-validation-for="SelectEwaste.productId" class="text-danger"></span>*@
-
-        <!--<div class="col-1">
-            <input type="checkbox" id="P2" name="Product" value="1002">
-            <label asp-for="SelectEwaste[0].productId">Mobile</label>
-            <input asp-for="SelectEwaste[0].Quantity"></input>
-        </div>
-        </div>
-
-            <div class="form-group row">
-                <div class="col-6">
-                    <img class="d-block w-100" src="https://www.rts.com/wp-content/uploads/2020/09/Electronics-recycling_New-York-1024x683.jpeg" alt="Box of Ewaste">
-
-
-                    </div>
-                <div class="col-1">
-                    <input type="checkbox" id="P3" name="Product" value="1003">
-                    <label asp-for="SelectEwaste[0].productId">xyz</label>
-                    <input asp-for="SelectEwaste[0].Quantity"></input>
-                </div>
-
-
-            </div>
-            <div class="form-group row">
-                <div class="col-6">
-                    <img class="d-block w-100" src="https://www.rts.com/wp-content/uploads/2020/09/Electronics-recycling_New-York-1024x683.jpeg" alt="Box of Ewaste">
-
-
-                </div>-->
-        @*<span asp-validation-for="SelectEwaste.productId" class="text-danger"></span>*@
-
-        <!--<div class="col-1">
-            <input type="checkbox" id="P4" name="Product" value="1004">
-            <label asp-for="SelectEwaste[0].productId">abc</label>
-            <input asp-for="SelectEwaste[0].Quantity"></input>
-        </div>
-        </div>-->
 
         <div class="col-12 p-3 mt-3">
             <form method="post">
                 @if (Model.Persons.Count() > 0)
                 {@*<label asp-for="Books.FirstOrDefault().Id"></label>*@
-
-
-
                 @foreach (var item in Model.Persons)
                 {
                     if (item.Id == Model.Persons.Count())
                     {
 
-                        <button asp-page-handler="Submit" asp-route-id="@item.Id" class="btn btn-danger btn-sm" onclick="return confirm('Please click ok to donate')">Donate</button>
+                        <button asp-page-handler="Submit" asp-route-id="@item.Id" class="btn btn-success" onclick="return ">Donate</button> @*confirm('Please click ok to donate')*@
                     }
                 }
-
-
             }
             else
             {
-                <p>Nothing available!</p>
+                @*<p>Nothing available!</p>*@
             }
             </form>
         </div>
-
-
-
-        @*<div class="form-group row">
-                <div class="col-3 offset-5">
-                    <input type="submit" value="Save" class="btn btn-primary form-control" />
-                </div>
-
-            </div>*@
     </form>
-
 </div>
+@section Styles{
+    <link href="~/css/SelectEwaste.css" rel="stylesheet" />
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
+}
+
+@section Scriptsjs{
+    <script src="~/js/FoodCalculator.js"></script>
+}
 @section Scripts{
     <partial FName="_ValidationScriptsPartial" />
 }
-<br /><br /><br />
+<br />
+<br />
+<br />
 
