Research Enhancement - screen ready

--- a/BookListRazor/Pages/WorldClimate/About.cshtml
+++ b/BookListRazor/Pages/WorldClimate/About.cshtml
@@ -96,6 +96,12 @@
         <source src="~/vid/Team/ranisha.mp4" type="video/mp4">
     </video>
 </div>
+@*<div class="form-group row"></div>*@
+<div class="col-3 offset-9">
+    <a asp-page="/WorldClimate/ResearchLinks" class="">Our Research Links</a> @*text-white*@
+    @*C:\Users\randas\Documents\Book List Project\BookListRazor\BookListRazor\Pages\WorldClimate\ResearchLinks.cshtml*@
+</div>
+@*</div>*@
 <br />
 <br />
 <br />
