--- a/BookListRazor/Pages/WorldClimate/Summary.cshtml
+++ b/BookListRazor/Pages/WorldClimate/Summary.cshtml
@@ -8,9 +8,9 @@
 
     <div class="container row p-0 m-0">
 
-        <div class="container">
+        @*<div class="container">
             <img src="~/img/ewaste/Thank you.png" style="width:900px; height:600px;" />
-        </div>
+        </div>*@
 
 
         <div class="col-4">
@@ -129,6 +129,9 @@
                 }
 
             </form>
+        </div>
+        <div class="container">
+            <img src="~/img/ewaste/Thank you.png" style="width:900px; height:600px;" />
         </div>
     </div>
 </body>
