--- a/BookListRazor/Pages/WorldClimate/SelectEwaste.cshtml
+++ b/BookListRazor/Pages/WorldClimate/SelectEwaste.cshtml
@@ -48,41 +48,41 @@
             </div>
         </div>
         @*<div class="form-group row stone1">
-            <div>
-                <div id="button" class="eggcheesesandwich">
-                    <div class="cheesesandwich1">
-                        <h2 class="cheesesandwich2">xyz</h2>
-                    </div>
-                    <div class="img-overlay">
-                        <label class="label label-success">Quantity: </label>
-                        <div>
-                            <span class="minus glyphicon glyphicon-minus glyphico"></span>
-                            <input type="text" id="xyz" name="xyz" value="0" />
-                            <span class="plus  glyphicon glyphicon-plus glyphico"></span>
+                <div>
+                    <div id="button" class="eggcheesesandwich">
+                        <div class="cheesesandwich1">
+                            <h2 class="cheesesandwich2">xyz</h2>
+                        </div>
+                        <div class="img-overlay">
+                            <label class="label label-success">Quantity: </label>
+                            <div>
+                                <span class="minus glyphicon glyphicon-minus glyphico"></span>
+                                <input type="text" id="xyz" name="xyz" value="0" />
+                                <span class="plus  glyphicon glyphicon-plus glyphico"></span>
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
-        </div>
 
 
-        <div class="form-group row stone1">
-            <div>
-                <div id="button" class="eggcheesesandwich">
-                    <div class="cheesesandwich1">
-                        <h2 class="cheesesandwich2">abc</h2>
-                    </div>
-                    <div class="img-overlay">
-                        <label class="label label-success">Quantity: </label>
-                        <div>
-                            <span class="minus glyphicon glyphicon-minus glyphico"></span>
-                            <input type="text" id="abc" name="abc" value="0" />
-                            <span class="plus  glyphicon glyphicon-plus glyphico"></span>
+            <div class="form-group row stone1">
+                <div>
+                    <div id="button" class="eggcheesesandwich">
+                        <div class="cheesesandwich1">
+                            <h2 class="cheesesandwich2">abc</h2>
+                        </div>
+                        <div class="img-overlay">
+                            <label class="label label-success">Quantity: </label>
+                            <div>
+                                <span class="minus glyphicon glyphicon-minus glyphico"></span>
+                                <input type="text" id="abc" name="abc" value="0" />
+                                <span class="plus  glyphicon glyphicon-plus glyphico"></span>
+                            </div>
                         </div>
                     </div>
                 </div>
-            </div>
-        </div>*@
+            </div>*@
 
 
 
@@ -106,6 +106,10 @@
             </form>
         </div>
     </form>
+    <div class="col-3 offset-9">
+        <a href ="https://www.outofuse.com/en/reuse/" target="_blank" class="">Multiplier source</a> @*text-white*@
+        @*C:\Users\randas\Documents\Book List Project\BookListRazor\BookListRazor\Pages\WorldClimate\ResearchLinks.cshtml*@
+    </div>
 </div>
 @section Styles{
     <link href="~/css/SelectEwaste.css" rel="stylesheet" />
