Minor static changes. Take up enhancements after this is fetched and pull.

--- a/BookListRazor/Pages/Index.cshtml
+++ b/BookListRazor/Pages/Index.cshtml
@@ -58,7 +58,7 @@
                     <img src="~/img/Home/Food.jpg" class="card-img-top" />
                     <div class="card-body">
                         <h5 class="card-title">Food Analysis</h5>
-                        <p class="card-text">Know the carbon footprint associated with your food order and understand your potential. You might end up revising your order!</p> 
+                        <p class="card-text">Know the carbon footprint associated with your food order and understand your potential and feel free to revise your order with given statistics!</p> 
                         <hr />
                         <a asp-page="/WorldClimate/FoodCalculator">TAKE ME WHERE THE FOOD IS!</a>
                     </div>
@@ -69,7 +69,7 @@
                     <img src="~/img/Home/Travel.jpg" class="card-img-top" />
                     <div class="card-body">
                         <h5 class="card-title">Travel Analysis</h5>
-                        <p class="card-text">Know your travel emissions as per the class of ground transportation services.</p><br />
+                        <p class="card-text">Know your travel emissions as per ground transportation services. Feel free to go through alternatives with the statistics provided!</p>
                         <hr />
                         <a asp-page="/WorldClimate/TravelCalculator">LET'S GO!</a>
                     </div>
