--- a/BookListRazor/Pages/WorldClimate/About.cshtml
+++ b/BookListRazor/Pages/WorldClimate/About.cshtml
@@ -68,7 +68,7 @@
                     <p class="ranishacardpara text-light">
                         <i>
                             "As a software developer myself, I have been extremely excited to participate in Hackathons like such.
-                            With a project level experience in Angular, API, ASP.NET C#, ASP.net MVC (in Entity framework and LLBL Gen using Visual studio, SSRS, SSMS).
+                            With a project level experience in Angular, API, ASP.NET C#, ASP.net MVC (in Entity framework using Visual studio, SSRS, SSMS).
                             <br /><br />I'm thankful to WinC! to allow me the opportunity to put my skillsets to use for such a noble cause!
                             <br /><br />I'm pretty sure you're stunned with our results!"
                         </i>
