--- a/BookListRazor/Pages/WorldClimate/Ewaste.cshtml
+++ b/BookListRazor/Pages/WorldClimate/Ewaste.cshtml
@@ -112,19 +112,18 @@
     </div>
 </div>
 
-<br />
-<br />
-<br />
 <div class="col-sm">
     <h1>Why Donate or Recycle Electronics?</h1>
     <hr style="height: 5px;   border-width: thin;   color: forestgreen;   background-color: orestgreen;  text-align: left;  margin-left: 0">
     <p> Electronic products are made from valuable resources and materials, including metals, plastics, and glass, all of which require energy to mine and manufacture. Donating or recycling consumer electronics conserves our natural resources and avoids air and water pollution, as well as greenhouse gas emissions that are caused by manufacturing virgin materials. </p>
-    <h4>For example:</h4>
+    <h5>For example:</h5>
     <p>Recycling one million laptops saves the energy equivalent to the electricity used by more than 3,500 US homes in a year.</p>
     <p>For every million cell phones we recycle, 35 thousand pounds of copper, 772 pounds of silver, 75 pounds of gold and 33 pounds of palladium can be recovered.</p>
+
+    <hr />
+    <p>Here are some fun goodies we curated for the users who wish to donate.</p>
 </div>
 
-<hr />
 <div class="container">
     <div class="row">
         <div class="col-md-4">
