--- a/BookListRazor/Pages/WorldClimate/ResearchLinks.cshtml
+++ b/BookListRazor/Pages/WorldClimate/ResearchLinks.cshtml
@@ -21,7 +21,7 @@
 </style>
 
 
-<h1 class="neon text-white">Your willingness is awesome!</h1>
+<h1 class="neon text-white">Our Research Links</h1>
 <br />
 <br />
 <body>
