final check in.

--- a/BookListRazor/Pages/WorldClimate/Ewaste.cshtml
+++ b/BookListRazor/Pages/WorldClimate/Ewaste.cshtml
@@ -67,38 +67,53 @@
             <li data-target="#carouselheader" data-slide-to="3">            </li>
         </ol>
         <div class="carousel-inner">
-            <div class="carousel-item active" style="background-image: url(/img/ewaste/beaconaudio.png); height:200px; width:150px; margin-left:80px; ">
-                <h2 class="neon">beacon</h2>
-                <p class="paracarouselheader">
-                    Check out Deloitte's BEACON portal to tune in to podcasts about our environment...
-                    <a href="https://podcasting.deloitte.com/clients/cb33ce64-33da-4a18-8758-2b7a12c73075/podcasts/22ca1d24-a88b-424d-b715-73044bb0ee64?episodeId=35d6fc07-0b8a-4c30-87e9-5c08dd58b32d" target="_blank">Read more</a>
-                </p>
+            @*<div class="carousel-item active" style="background-image: url(/img/ewaste/beaconaudio.png);  ">
+            <h2 class="neon">beacon</h2>
+            <p class="paracarouselheader">
+                Check out Deloitte's BEACON portal to tune in to podcasts about our environment...
+                <a href="https://podcasting.deloitte.com/clients/cb33ce64-33da-4a18-8758-2b7a12c73075/podcasts/22ca1d24-a88b-424d-b715-73044bb0ee64?episodeId=35d6fc07-0b8a-4c30-87e9-5c08dd58b32d" target="_blank">Read more</a>
+            </p>
+        </div>*@
+            <div class="carousel-item active" style="background-image: url('/img/ewaste/mumbai ewaste.jpg');">
+                <a href="https://indianexpress.com/article/cities/mumbai/maharashtra-recycles-only-1-of-e-waste-it-generates-mpcb-data-7265125/" target="_blank">
+                    <h2 class="neon">Case Study: Maharashtra, India(2021)</h2>
+                    @*<p class="paracarouselheader">*@
+                    @*The state generates 10 lakh tonnes of e-waste annually, but only 975.25 tonnes of it was recycled while 11,015.49 tonnes was dismantled but yet to be recycled in...
+                Read more*@
+                </a>
+                @*</p>*@
             </div>
+
             <div class="carousel-item" style="background-image: url(/img/ewaste/global-e-waste-management-market.png);">
-                <h2 class="neon"> example heading</h2>
-                <p class="paracarouselheader">
-                    The global e-waste management market size was estimated at 44.7 million metric tons in 2016. It is projected to register a CAGR of 4.1% from 2017 to 2025...
-                    <a href="https://www.grandviewresearch.com/industry-analysis/e-waste-management-market" target="_blank">Read more</a>
-                </p>
+                <a href="https://www.grandviewresearch.com/industry-analysis/e-waste-management-market" target="_blank">
+                    <h2 class="neon">Global E-waste Management Market</h2>
+                    @*<p class="paracarouselheader">*@
+                </a>
+                @*</p>*@
             </div>
-            <div class="carousel-item text-white" style="background-image: url('/img/ewaste/mumbai ewaste.jpg');">
-                <h2 class="neon"> example heading 2</h2>
-                <p class="paracarouselheader">
-                    The state generates 10 lakh tonnes of e-waste annually, but only 975.25 tonnes of it was recycled while 11,015.49 tonnes was dismantled but yet to be recycled in the formal sector...
-                    <a href="https://indianexpress.com/article/cities/mumbai/maharashtra-recycles-only-1-of-e-waste-it-generates-mpcb-data-7265125/" target="_blank"> Read more</a>
-                </p>
+
+            <div class="carousel-item text-white" style="background-image: url(/img/ewaste/beacon2.png); ">
+                <a href="https://podcasting.deloitte.com/clients/cb33ce64-33da-4a18-8758-2b7a12c73075/podcasts/22ca1d24-a88b-424d-b715-73044bb0ee64?episodeId=35d6fc07-0b8a-4c30-87e9-5c08dd58b32d" target="_blank">
+                    <h2 class="neon">Deloitte Beacon</h2>
+                    @*<p class="paracarouselheader">Check out Deloitte's BEACON portal to tune in to podcasts about our environment...*@
+                    @*Read more*@
+                </a>
+                @*</p>*@
             </div>
-            <div class="carousel-item ">
-                <h2> example heading 3</h2>
-                <p class="paracarouselheader">Random textRandom textRandom textRandom textRandom textRandom textRandom textRandom textRandom textRandom text</p>
-                <a href="#" target="_blank">Read more</a>
+            <div class="carousel-item text-white" style="background-image: url('/img/ewaste/protecting annex.png');">
+                <a href="https://www.who.int/globalchange/publications/factsheets/Kit2008_annex1_2.pdf?ua=1" target="_blank">
+                    <h2 class="neon">WHO - Factsheets Publications</h2>
+                    @*<p class="paracarouselheader">*@
+                    @*The state generates 10 lakh tonnes of e-waste annually, but only 975.25 tonnes of it was recycled while 11,015.49 tonnes was dismantled but yet to be recycled in...
+                Read more*@
+                </a>
+                @*</p>*@
             </div>
-            <div class="carousel-item " style="background-image: url(img/ewaste/E-waste-Management.jpg); ">
-                @*C:\Users\randas\Documents\Book List Project\BookListRazor\BookListRazor\wwwroot\img\ewaste\E-waste-Management.jpg*@
-                <h2> example heading 4</h2>
-                <p class="paracarouselheader">Random textRandom textRandom textRandom textRandom textRandom textRandom textRandom textRandom textRandom text</p>
-                <a href="#" target="_blank">Read more</a>
-            </div>
+            @*<div class="carousel-item ">
+            <h2> example heading 3</h2>
+            <p class="paracarouselheader">Random textRandom textRandom textRandom textRandom textRandom textRandom textRandom textRandom textRandom text</p>
+            <a href="#" target="_blank">Read more</a>
+        </div>*@
 
             <a class="carousel-control-prev align-content-between alert-dark" role="button" data-slide="prev" href="#carouselheader">
                 <span class="sr-only"></span>
